java/java-tests/testData/codeInsight/daemonCodeAnalyzer/javaDoc/packageInfo/p5OldJava/package-info.java
/**
 * Hello {@link <error descr="Cannot resolve symbol 'ShouldNotRequireQualifier'">ShouldNotRequireQualifier</error>}
 * 
 * @author Mathias Boulay
 */
package p5;

class ShouldNotRequireQualifier {}